Deployment/service-nifi.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/neg-status: '{"network_endpoint_groups":{"8443":"k8s1-a853b1d6-default-myrel-nifi-8443-a0600ad7"},"zones":["us-central1-c"]}'
    meta.helm.sh/release-name: myrel
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2022-09-13T10:43:41Z"
  labels:
    app: nifi
    app.kubernetes.io/managed-by: Helm
    chart: nifi-1.1.1
    heritage: Helm
    release: myrel
  name: myrel-nifi
  namespace: default
  resourceVersion: "27927"
  uid: 60b1531d-cbb7-417b-a765-cde4548cf6c1
spec:
  clusterIP: 10.8.155.171
  clusterIPs:
    - 10.8.155.171
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: site-to-site
      port: 10000
      protocol: TCP
      targetPort: 10000
  selector:
    app: nifi
    release: myrel
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
