Deployment/service-zk-headless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: myrel
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2022-09-13T10:43:41Z"
  labels:
    app.kubernetes.io/component: zookeeper
    app.kubernetes.io/instance: myrel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zookeeper
    helm.sh/chart: zookeeper-9.2.7
  name: myrel-zookeeper-headless
  namespace: default
  resourceVersion: "27860"
  uid: bff3f2aa-7d49-4cd8-a6bc-a56eea05077f
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp-client
      port: 2181
      protocol: TCP
      targetPort: client
    - name: tcp-follower
      port: 2888
      protocol: TCP
      targetPort: follower
    - name: tcp-election
      port: 3888
      protocol: TCP
      targetPort: election
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: zookeeper
    app.kubernetes.io/instance: myrel
    app.kubernetes.io/name: zookeeper
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
